# cible

./: pyproject.toml  unsloth-cli.py
cible/: __init__.py  chat_templates.py  save.py  tokenizer_utils.py  trainer.py
cible/kernels/: __init__.py  cross_entropy_loss.py  fast_lora.py  flex_attention.py  geglu.py  rms_layernorm.py  rope_embedding.py  swiglu.py  utils.py
cible/models/: __init__.py  _utils.py  dpo.py  gemma.py  gemma2.py  llama.py  loader.py  mapper.py  mistral.py  qwen2.py
